<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="top"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">

    <ImageView
        android:layout_width="@dimen/icon_main_width"
        android:layout_height="@dimen/icon_main_height"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/imageView"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_launcher"
        style="@style/AppTheme" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offical_site_name"
                android:textSize="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offical_site_product_announce1"
                android:textSize="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/textView"
                android:layout_height="wrap_content"
                android:text="@string/offical_site_product_announce2"
                android:textSize="12dp"
                android:textIsSelectable="false" />
        </LinearLayout>




</LinearLayout>
