<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.webalexx.prj_mechanik.ui.DetailActivity"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="250dp" />


        <TextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/article_title"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textColor="@android:color/primary_text_light"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price_title"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingBottom="@dimen/activity_margin"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/call_action"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/call_icon"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_call_grey600_36dp"
                android:tint="?attr/colorAccent"/>


            <TextView
                android:id="@+id/call_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/call_icon"
                android:text="@string/call_action"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/primary_text_light"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/call_icon"
                android:layout_below="@id/call_title"
                android:text="@string/phone"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mail_action"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mail_icon"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_mail_grey600_36dp"
                android:tint="?attr/colorAccent"/>


            <TextView
                android:id="@+id/mail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/mail_icon"
                android:text="@string/mail_action"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/primary_text_light"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/mail_icon"
                android:layout_below="@id/mail_title"
                android:text="@string/mail"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
